moved CSS to SCSS

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -4,7 +4,7 @@
 	<div class="content-selection-list">
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="animation" id="select-animation"/>
+			<input type="checkbox" name="content-selection" value="animation" id="select-animation" class="accessible-hidden"/>
 			<label for="select-animation">
 				
 				<app-svg-animation></app-svg-animation>
@@ -14,7 +14,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="audio" id="select-audio"/>
+			<input type="checkbox" name="content-selection" value="audio" id="select-audio" class="accessible-hidden"/>
 			<label for="select-audio">
 				
 				<app-svg-audio></app-svg-audio>
@@ -24,7 +24,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="forms" id="select-forms"/>
+			<input type="checkbox" name="content-selection" value="forms" id="select-forms" class="accessible-hidden"/>
 			<label for="select-forms">
 				
 				<app-svg-forms></app-svg-forms>
@@ -35,7 +35,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="images" id="select-images"/>
+			<input type="checkbox" name="content-selection" value="images" id="select-images" class="accessible-hidden"/>
 			<label for="select-images">
 				
 				<app-svg-images></app-svg-images>
@@ -45,7 +45,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="modals" id="select-modals"/>
+			<input type="checkbox" name="content-selection" value="modals" id="select-modals" class="accessible-hidden"/>
 			<label for="select-modals">
 				
 				<app-svg-modals></app-svg-modals>
@@ -55,7 +55,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="time" id="select-time"/>
+			<input type="checkbox" name="content-selection" value="time" id="select-time" class="accessible-hidden"/>
 			<label for="select-time">
 				
 				<app-svg-timed-components></app-svg-timed-components>
@@ -65,7 +65,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="translations" id="select-translations"/>
+			<input type="checkbox" name="content-selection" value="translations" id="select-translations" class="accessible-hidden"/>
 			<label for="select-translations">
 				
 				<app-svg-translations></app-svg-translations>
@@ -75,7 +75,7 @@
 		</span>
 		
 		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="video" id="select-video"/>
+			<input type="checkbox" name="content-selection" value="video" id="select-video" class="accessible-hidden"/>
 			<label for="select-video">
 				
 				<app-svg-video></app-svg-video>
