--- a/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
+++ b/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
@@ -8,6 +8,7 @@
 				 name="compliance-level" 
 				 value="{{ level }}" id="compliance-level-{{ level }}"
 				 [checked]="level === defaultLevel"
+				 class="accessible-hidden"
 			/>
 			<label for="compliance-level-{{ level }}">{{ level }}</label>
 		</span>
