prevent transition animation on label elements if user has disabled them in OS/browser

--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -2,4 +2,8 @@ $quick-animation-duration: .25s;
 
 @mixin transition($duration) {
 	transition: all $duration ease-in;
+	
+	@media (prefers-reduced-motion) {
+		transition: none;
+	}
 }
