--- a/src/assets/scss/components/_compliance-level.scss
+++ b/src/assets/scss/components/_compliance-level.scss
@@ -16,10 +16,31 @@
 		justify-content: center;
 		margin-right: .5em;
 		width: 3em;
+		
+		&:hover {
+			background-image: repeating-linear-gradient(
+				45deg,
+				transparent,
+				transparent 10px,
+				rgba($black, .2) 10px,
+				rgba($black, .2) 20px
+			);
+		}
 	}
 	
 	input[type=radio]:checked + label {
 		background-color: $light-grey;
-		color: #0070b0;
+		color: $primary;
+		
+		&:hover {
+			background-image: repeating-linear-gradient(
+				45deg,
+				transparent,
+				transparent 10px,
+				rgba($black, .15) 10px,
+				rgba($black, .15) 20px
+			);
+			color: $black;
+		}
 	}
 }
