--- a/src/assets/scss/components/_content-selection.scss
+++ b/src/assets/scss/components/_content-selection.scss
@@ -24,18 +24,47 @@
 		cursor: pointer;
 		display: block;
 		padding: 1em;
+		
+		&:hover {
+			background-image: repeating-linear-gradient(
+				45deg,
+				transparent,
+				transparent 10px,
+				rgba($black, .2) 10px,
+				rgba($black, .2) 20px
+			);
+		}
 	}
 	
 	input[type=checkbox]:checked ~ label {
 		background-color: $light-grey;
-		color: #0070b0;
+		color: $primary;
+		
+		&:hover {
+			background-image: repeating-linear-gradient(
+				45deg,
+				transparent,
+				transparent 10px,
+				rgba($black, .15) 10px,
+				rgba($black, .15) 20px
+			);
+			color: $black;
+			
+			svg {
+				stroke: $black;
+			}
+			
+			.filled {
+				fill: $black;
+			}
+		}
 		
 		svg {
-			stroke: #0070b0;
+			stroke: $primary;
 		}
 		
 		.filled {
-			fill: #0070b0;
+			fill: $primary;
 		}
 	}
 	
