setting up layout for guidelines

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -60,7 +60,7 @@
 				
 				<app-svg-timed-components></app-svg-timed-components>
 				
-				<span class="content-selection-label">Timed Components</span>
+				<span class="content-selection-label">Timed</span>
 			</label>
 		</span>
 		
