svg's inserted more dynamically, and moved guideline creation out to repository

--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -3,4 +3,6 @@
 	<app-check-content-types></app-check-content-types>
 
 	<app-check-desired-compliance-level></app-check-desired-compliance-level>
+	
+	<app-guidelines></app-guidelines>
 </form>
