--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -3,86 +3,14 @@
 	
 	<div class="content-selection-list">
 		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="animation" id="select-animation" class="accessible-hidden"/>
-			<label for="select-animation">
+		<span class="content-selection-item" *ngFor="let contentType of getContentTypes()">
+			<input type="checkbox" name="content-selection" value="{{ contentType }}" id="select-{{ contentType }}" class="accessible-hidden"/>
+			<label for="select-{{ contentType }}">
 				
-				<app-svg-animation></app-svg-animation>
+				<app-svg-content-types svgIcon="{{ contentType }}"></app-svg-content-types>
 				
-				<span class="content-selection-label">Animation</span>
+				<span class="content-selection-label">{{ contentType }}</span>
 			</label>
 		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="audio" id="select-audio" class="accessible-hidden"/>
-			<label for="select-audio">
-				
-				<app-svg-audio></app-svg-audio>
-				
-				<span class="content-selection-label">Audio</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="forms" id="select-forms" class="accessible-hidden"/>
-			<label for="select-forms">
-				
-				<app-svg-forms></app-svg-forms>
-
-				
-				<span class="content-selection-label">Forms</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="images" id="select-images" class="accessible-hidden"/>
-			<label for="select-images">
-				
-				<app-svg-images></app-svg-images>
-				
-				<span class="content-selection-label">Images</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="modals" id="select-modals" class="accessible-hidden"/>
-			<label for="select-modals">
-				
-				<app-svg-modals></app-svg-modals>
-				
-				<span class="content-selection-label">Modals</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="time" id="select-time" class="accessible-hidden"/>
-			<label for="select-time">
-				
-				<app-svg-timed-components></app-svg-timed-components>
-				
-				<span class="content-selection-label">Timed</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="translations" id="select-translations" class="accessible-hidden"/>
-			<label for="select-translations">
-				
-				<app-svg-translations></app-svg-translations>
-				
-				<span class="content-selection-label">Translations</span>
-			</label>
-		</span>
-		
-		<span class="content-selection-item">
-			<input type="checkbox" name="content-selection" value="video" id="select-video" class="accessible-hidden"/>
-			<label for="select-video">
-				
-				<app-svg-video></app-svg-video>
-				
-				<span class="content-selection-label">Video</span>
-			</label>
-		</span>
-		
 	</div>
 </fieldset>
