passing required compliance level through to guidelines component

--- a/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
+++ b/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
@@ -9,6 +9,7 @@
 				 value="{{ level }}" id="compliance-level-{{ level }}"
 				 [checked]="level === defaultLevel"
 				 class="accessible-hidden"
+				 (change)="toggleSelectedComplianceLevel($event, level)"
 			/>
 			<label for="compliance-level-{{ level }}">{{ level }}</label>
 		</span>
