list of matching guidelines now matches against selection

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -11,6 +11,7 @@
 				id="select-{{ contentType }}"
 				class="accessible-hidden"
 				(change)="toggleSelectedType($event, contentType)"
+				aria-controls="guidelines"
 			/>
 			
 			<label for="select-{{ contentType }}">
