--- a/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
+++ b/src/app/components/check-desired-compliance-level/check-desired-compliance-level.component.html
@@ -10,6 +10,7 @@
 				 [checked]="level === defaultLevel"
 				 class="accessible-hidden"
 				 (change)="toggleSelectedComplianceLevel($event, level)"
+				 aria-controls="guidelines"
 			/>
 			<label for="compliance-level-{{ level }}">{{ level }}</label>
 		</span>
