--- a/src/app/components/guidelines/guidelines.component.html
+++ b/src/app/components/guidelines/guidelines.component.html
@@ -1,1 +1,7 @@
-{{ selectedContentTypes }}
+<div class="guidelines" aria-relevant="all" aria-live="polite" id="guidelines">
+	
+	<div *ngFor="let guideline of guidelines">
+		{{ guideline.guidelineNumber }}
+	</div>
+	
+</div>
