--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,4 +6,5 @@
 @import "components/_forms";
 @import "components/_content-selection";
 @import "components/_compliance-level";
+@import "components/_guideline";
 
