--- a/src/app/components/guideline/guideline.component.html
+++ b/src/app/components/guideline/guideline.component.html
@@ -7,8 +7,8 @@
 	<p class="guideline-name">{{ guideline.guidelineNumber }} {{ guideline.guidelineName }}</p>
 
 	<details>
-		<summary>{{ guideline.shortDescription }}</summary>
-		<div>
+		<summary class="short-description">{{ guideline.shortDescription }}</summary>
+		<div class="long-description">
 			{{ guideline.longDescription }}
 		</div>
 	</details>
