--- a/src/assets/scss/components/_guideline.scss
+++ b/src/assets/scss/components/_guideline.scss
@@ -6,7 +6,7 @@
 		border: 1px solid;
 		padding: .5em;
 	}
-
+	
 	.guideline-name {
 		display: inline-block;
 		font-weight: bold;
@@ -22,6 +22,14 @@
 	
 	.long-description {
 		margin-top: 1em;
+	}
+	
+	li {
+		line-height: 1.5;
+	}
+	
+	.js-snippets {
+		font-family: monospace;
 	}
 }
 
