--- a/src/app/components/guidelines/guidelines.component.html
+++ b/src/app/components/guidelines/guidelines.component.html
@@ -1,5 +1,5 @@
 <section class="guidelines" aria-relevant="all" aria-live="polite" id="guidelines" aria-labelledby="guidelines-heading">
-	<h2 id="guidelines-heading">You need to test these things:</h2>
+	<h2 id="guidelines-heading" *ngIf="guidelines.length > 0">You need to test these things:</h2>
 	
 	<ol class="guideline-list">
 		<li *ngFor="let guideline of guidelines">
