better spacing on content selection items and focus style for textarea code snippets

--- a/src/assets/scss/components/_content-selection.scss
+++ b/src/assets/scss/components/_content-selection.scss
@@ -13,7 +13,7 @@
 		color: $white;
 		flex: 0 0 100%;
 		list-style: none;
-		margin: 1em 0.15em 0 auto;
+		margin: .5em 0.25em 0 auto;
 		
 		@media(min-width: 460px) {
 			flex: 0 0 47%;
