added some further messaging to make it clearer how many guidelines there are and how many are left to check

--- a/src/app/components/check-content-types/check-content-types.component.html
+++ b/src/app/components/check-content-types/check-content-types.component.html
@@ -1,6 +1,8 @@
 <fieldset class="content-selection">
 	<legend>What kind of content are you checking?</legend>
 	
+	<p>Some guidelines only apply to some types of content.</p>
+	
 	<div class="content-selection-list">
 		
 		<span class="content-selection-item" *ngFor="let contentType of getAllContentTypes()" title="{{ contentType }}">
