--- a/src/app/components/guidelines/guidelines.component.html
+++ b/src/app/components/guidelines/guidelines.component.html
@@ -1,7 +1,7 @@
 <section class="guidelines" aria-relevant="all" aria-live="polite" id="guidelines" aria-labelledby="guidelines-heading">
 	<h2 id="guidelines-heading" *ngIf="getTotalGuidelines() > 0">You need to test these things:</h2>
 	
-	<p *ngIf="getTotalGuidelines() > 0">Checked {{ getTotalCheckedGuidelines() }} of {{ getTotalGuidelines() }} applicable guidelines.</p>
+	<p *ngIf="getTotalGuidelines() > 0">Checked {{ getTotalCheckedGuidelines() }} of {{ getTotalGuidelines() }} applicable guidelines ({{ getPercentCompleted() }}% complete).</p>
 	
 	<h3 *ngIf="hasGuidelinesForLevel(1)">Perceivable</h3>
 	<p *ngIf="hasGuidelinesForLevel(1)">People will be perceiving your content in a variety of ways, these guidelines will help ensure they can.</p>
