hiding SVG icons from a11y tree, they're already accompanied by text

--- a/src/app/components/svg/svg-audio/svg-audio.component.html
+++ b/src/app/components/svg/svg-audio/svg-audio.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" stroke="#000000" fill="none" stroke-linecap="round">
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" stroke="#000000" fill="none" stroke-linecap="round" role="img" aria-hidden="true">
 	<path d="m 194.49224,89.729696 a 66.128731,66.128731 0 0 1 33.06436,57.269164 66.128731,66.128731 0 0 1 -33.06437,57.26916"/>
 	<path d="m 261.20071,60.316475 a 63.889088,100.09219 0 0 1 31.94454,86.682385 63.889088,100.09219 0 0 1 -31.94454,86.68238"/>
 	<path d="M 227.86329,75.039713 A 64.94249,83.091263 0 0 1 260.33453,146.99886 64.94249,83.091263 0 0 1 227.86329,218.958"/>
