--- a/src/app/components/svg/svg-modals/svg-modals.component.html
+++ b/src/app/components/svg/svg-modals/svg-modals.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linecap="round">
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linecap="round" role="img" aria-hidden="true">
 	<rect width="281.43564" height="155.9406" x="9.2821779" y="38.584164" ry="12.995037"/>
 
 	<path d="m 257.73501,50.341451 18.53369,18.53368"/>
