--- a/src/app/components/svg/svg-timed-components/svg-timed-components.component.html
+++ b/src/app/components/svg/svg-timed-components/svg-timed-components.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round" stroke-linecap="round">
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round" stroke-linecap="round" role="img" aria-hidden="true">
 	<g transform="scale(.9), translate(15,0)">
 		<circle cx="150" cy="150" r="145"/>
 		<path d="M 150,12.779706 V 33.571784"/>
