--- a/src/app/components/svg/svg-forms/svg-forms.component.html
+++ b/src/app/components/svg/svg-forms/svg-forms.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round">
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round" role="img" aria-hidden="true">
 	<path d="m 173.19191,190.27818 -9.75507,18.80045 20.35028,-2.21812 m 80.53386,-74.45159 10.04936,15.72805 m -101.17843,42.14121 108.25449,-69.16872 10.59521,16.58233 -108.25449,69.16872 z"/>
 	<rect width="149.25743" height="28.960394" x="53.465343" y="45.26733"/>
 	<rect width="149.25743" height="28.960396" x="53.465343" y="95.762375"/>
