--- a/src/app/components/svg/svg-video/svg-video.component.html
+++ b/src/app/components/svg/svg-video/svg-video.component.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round">
+<svg xmlns="http://www.w3.org/2000/svg" width="300" height="300" viewBox="0 0 300 300" version="1.1" fill="none" stroke="#000000" stroke-linejoin="round" role="img" aria-hidden="true">
 	<g transform="scale(.9), translate(15,0)">
 		<rect width="284.62003" height="169.65601" x="10.525463" y="121.13264" ry="0.1311852"/>
 		<rect width="287.07401" height="38.578964" x="-13.888877" y="82.214249" ry="0.029830884" transform="rotate(-11.525174)"/>
