--- a/src/app/components/check/check.component.html
+++ b/src/app/components/check/check.component.html
@@ -2,11 +2,15 @@
 	<div class="setup">
 		<h1>Accessibility Testing Checklist Tool</h1>
 		
-		<app-check-content-types (updateGuidelines)="updateGuidelines($event)"></app-check-content-types>
+		<app-check-content-types (markListParamsChanged)="markListParamsChanged($event)"></app-check-content-types>
 
-		<app-check-desired-compliance-level (updateGuidelines)="updateGuidelines($event)"></app-check-desired-compliance-level>
+		<app-check-desired-compliance-level (markListParamsChanged)="markListParamsChanged($event)"></app-check-desired-compliance-level>
+		
+		<button type="button" (click)="showChecklist()" *ngIf="!canShowResults()">Create checklist</button>
+		<button type="button" (click)="updateGuidelines()" *ngIf="canShowListParamsChanged()">Re-create checklist</button>
 	</div>
-	<div class="results">
+	
+	<div class="results" *ngIf="canShowResults()">
 		<app-guidelines [selectedContentTypes]="getSelectedContentTypes()" [guidelineLevel]="getSelectedGuidelineLevel()"></app-guidelines>
 	</div>
 </form>
